# BSPT

./: ChangeLog  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  convert.c  file_utils.c  filter.c  html_utils.c  html_utils.c.bak  html_utils.h  main.c  main.h  msg_utils.c  readseq.c  seq.h  stats.c  stats.h  trim.c
